fixed sidebar width so vec3 and strings dont break the line

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -200,7 +200,7 @@ input.error {
 
 #sidebar {
   background: #2b2b2b;
-  width: 330px;
+  width: 331px;
 }
 
 #sidebar * {
@@ -266,7 +266,7 @@ input[type=color]::-moz-focus-inner {
   height: 100%;
   overflow: auto;
   position: fixed;
-  width: 330px;
+  width: 331px;
 }
 
 div.vec2,
@@ -955,6 +955,11 @@ span.entity-name {
   min-height: 20px;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.row input.string {
+  box-sizing: border-box;
+  width: 165px;
 }
 
 .help-lists {
